--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
     
 
-    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/gwb.jpg);">
+    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/gwb.jpg);">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
 
@@ -127,7 +127,7 @@
       </div>
     </div>
 
-    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/gwb.jpg);">
+    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/gwb.jpg);">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
 
