--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
           <div class="about-content-text mb-80">
             <h6 class="wow fadeInUp" data-wow-delay="300ms">About Student Week</h6>
             <h3 class="wow fadeInUp" data-wow-delay="300ms">Welcome To InPTA Student Week 2023</h3>
-            <p class="wow fadeInUp" data-wow-delay="300ms">InPTA hosts a student week designed to offer an introduction and guidance for those interested in PTA science and GWB searches within PTAs. This student week comprises three phases, each spanning three days.
+            <p class="wow fadeInUp" data-wow-delay="300ms">InPTA hosts a student week designed to offer introduction and guidance for those who are interested in PTA science and GWB searches within PTAs. This student week comprises three phases, each spanning three days.
               In the first phase, students receive an introduction to pulsars and the fundamentals of pulsar observations.
-              The second phase provides an introduction to pulsar timing, PTAs, and offers insights into the work conducted at InPTA.
-              In the third phase, participants engage in discussions about recent PTA findings, the methods employed in stochastic GWB searches, and the potential of PTA datasets to unlock and understand new physics phenomenas.
+              The second phase provides an introduction to pulsar timing, and PTAs, and offers insights into the work conducted at InPTA.
+              In the third phase, participants engage in discussions about recent PTA findings, the methods employed in stochastic GWB searches, and the potential of PTA datasets to unlock and understand new physics phenomena.
             </p>
             <a href="#" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested, Register Here <i
                 class="zmdi zmdi-long-arrow-right"></i></a>
