--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <title>InPTA - Student Week 2023</title>
 
+  <link rel="icon" href="./img/core-img/favicon.png">
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" integrity="sha512-WEQNv9d3+sqyHjrqUZobDhFARZDko2wpWdfcpv44lsypsSuMO0kHGd3MQ8rrsBn/Qa39VojphdU6CMkpJUmDVw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -88,9 +90,7 @@
                 <h2 data-animation="fadeInUp" data-delay="300ms">Introduction To Pulsars</h2>
 
                 <div class="event-meta" data-animation="fadeInUp" data-delay="500ms">
-                  <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i> November 18, 2023</a>
-                  <a class="event-date" href="#"><i class="zmdi zmdi-minus"></i></a>
-                  <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i>November 20, 2023</a>
+                  <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i> November 18 - 20, 2023</a>
                 </div>
                 <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                   <a href="#schedule1" class="btn confer-btn m-2">View Schedule<i class="zmdi zmdi-long-arrow-right"></i></a>
@@ -102,7 +102,7 @@
       </div>
     
 
-    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/gwb.jpg);">
+    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/gwb.jpg);">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
 
@@ -112,9 +112,7 @@
               <h2 data-animation="fadeInUp" data-delay="300ms">GWB Search With Pulsars</h2>
 
               <div class="event-meta" data-animation="fadeInUp" data-delay="500ms">
-                <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i> December 16, 2023</a>
-                <a class="event-date" href="#"><i class="zmdi zmdi-minus"></i></a>
-                <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i>December 18, 2023</a>
+                <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i> December 16 - 18, 2023</a>
               </div>
               <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                 <a href="#schedule2" class="btn confer-btn m-2">View Schedule<i class="zmdi zmdi-long-arrow-right"></i></a>
@@ -125,7 +123,7 @@
       </div>
     </div>
 
-    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/gwb.jpg);">
+    <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/gwb.jpg);">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
 
@@ -135,9 +133,7 @@
               <h2 data-animation="fadeInUp" data-delay="300ms">New Physics With PTA Datasets</h2>
 
               <div class="event-meta" data-animation="fadeInUp" data-delay="500ms">
-                <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i> December 21, 2023</a>
-                <a class="event-date" href="#"><i class="zmdi zmdi-minus"></i></a>
-                <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i>December 23, 2023</a>
+                <a class="event-date" href="#"><i class="zmdi zmdi-calendar"></i> December 21 - 23, 2023</a>
               </div>
               <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                 <a href="#schedule3" class="btn confer-btn m-2">View Schedule<i class="zmdi zmdi-long-arrow-right"></i></a>
@@ -162,10 +158,10 @@
           <div class="about-content-text mb-80">
             <h6 class="wow fadeInUp" data-wow-delay="300ms">About Student Week</h6>
             <h3 class="wow fadeInUp" data-wow-delay="300ms">Welcome To InPTA Student Week 2023</h3>
-            <p class="wow fadeInUp" data-wow-delay="300ms">InPTA hosts a student week designed to offer introduction and guidance for those who are interested in PTA science and GWB searches within PTAs. This student week comprises three phases, each spanning three days.
+            <p class="wow fadeInUp" data-wow-delay="300ms">InPTA hosts a student week designed to offer an introduction and guidance for those interested in PTA science and GWB searches within PTAs. This student week comprises three phases, each spanning three days.
               In the first phase, students receive an introduction to pulsars and the fundamentals of pulsar observations.
-              The second phase provides an introduction to pulsar timing, and PTAs, and offers insights into the work conducted at InPTA.
-              In the third phase, participants engage in discussions about recent PTA findings, the methods employed in stochastic GWB searches, and the potential of PTA datasets to unlock and understand new physics phenomena.
+              The second phase provides an introduction to pulsar timing, PTAs, and offers insights into the work conducted at InPTA.
+              In the third phase, participants engage in discussions about recent PTA findings, the methods employed in stochastic GWB searches, and the potential of PTA datasets to unlock and understand new physics phenomenas.
             </p>
             <a href="#" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested, Register Here <i
                 class="zmdi zmdi-long-arrow-right"></i></a>
