--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="row h-100 align-items-center">
 
             <div class="col-12">
-              <div class="welcome-text text-right">
+              <div class="welcome-text-two text-right" id="home">
                 <h2 data-animation="fadeInUp" data-delay="500ms">InPTA Student<br>Week 2023</h2>
                 <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                   <a href="#" class="btn confer-btn">Register<i class="zmdi zmdi-long-arrow-right"></i></a>
